<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/nombre_proceso_list"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textViewTiempo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/tiempo_proceso"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textViewEstado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/text_color_estado"
        android:text="@string/estado_proceso"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textViewLlegada"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/tiempo_llegada"
    android:gravity="center"/>
</LinearLayout>
