<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/tittle_home"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTittle">

        <TextView
            android:id="@+id/labelIngresarProceso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/ingresar_proceso"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/labelNombreProceso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/nombre_proceso"
            android:paddingTop="5dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/labelIngresarProceso"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextNombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/ejemplo_nombre_proceso"
            android:textSize="12dp"
            android:textColor="@color/gradient_uno"
            app:layout_constraintStart_toEndOf="@id/labelNombreProceso"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/labelNombreProceso"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:inputType="text"/>

        <TextView
            android:id="@+id/labelTiempoLlegada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tiempo_llegada"
            android:paddingTop="5dp"
            android:textSize="16sp"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/labelNombreProceso"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextTiempoLlegada"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            app:layout_constraintStart_toEndOf="@id/labelTiempoLlegada"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/labelTiempoLlegada"
            android:hint="tiempo de LLegada"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/gradient_uno"
            android:inputType="numberDecimal"/>

        <TextView
            android:id="@+id/labelTiempoProceso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tiempo_ejecucion"
            android:paddingTop="5dp"
            android:textSize="16sp"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/labelTiempoLlegada"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextTiempo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            app:layout_constraintStart_toEndOf="@id/labelTiempoProceso"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/labelTiempoProceso"
            android:hint="@string/ejemplo_tiempo_ejecucion"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/gradient_uno"
            android:inputType="numberDecimal"/>

        <Button
            android:id="@+id/btnAgregar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:background="@drawable/gradient_background"
            android:text="@string/agregar_proceso"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:elevation="8dp"
            app:layout_constraintTop_toBottomOf="@id/editTextTiempo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="181dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"/>

        <!-- Encabezados -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/textViewProceso"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Proceso"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/textViewTiempo"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewTiempo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Tiempo"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/textViewProceso"
                app:layout_constraintEnd_toStartOf="@id/textViewEstado"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewEstado"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Estado"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/textViewTiempo"
                app:layout_constraintEnd_toStartOf="@id/textViewLlegada"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewLlegada"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Tiempo de Llegada"
                 android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/textViewEstado"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewProcesos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnIniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@drawable/gradient_background"
        android:layout_marginStart="120dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="107dp"


        android:layout_marginBottom="5dp"
        android:text="@string/iniciar_simulacion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>